--- a/2021_annual_report/2021_SFA_Annual_Report.tex
+++ b/2021_annual_report/2021_SFA_Annual_Report.tex
@@ -24,7 +24,7 @@ Nutrition Search\\-appears successful
 Two faculty early tenure\\-Juan and Jen
 Advising center\\-relocation tom roger clapp
 Students recruitment and retention\\-report numbers
-%The year 2019 - 2020 saw the School of Food and Agriculture successfully recruit three outstanding individuals from out of state. Robert Dumas was hired to run the Matthew Highlands Food Science Pilot Plant; Sue Ishaq was recruited from the University of Oregon to establish a teaching and research program in the animal microbiome; Rachel Schattman was selected from over 60 candidates to take on the Sustainable Agriculture program, which was the first such program in the nation when it was established 30 years ago. All three candidates could have earned higher salaries at other institutions, but came to UMaine because of the welcoming community and the high quality of life. This successful recruiting effort speaks directly to the third goal of the President's Strategic Vision and Values framework, that ``The university will be a rewarding place to live, learn and work"  and to the R \& D goal for FY2020 - FY2024 ``To make Maine the best state in the nation in which to live, work, and learn by 2030". Significant changes have been made in the SAG curriculum, which has been a cause of concern, and three of our pre-tenured faculty are well - placed for an early application for tenure. This speaks to the nurturing environment we have provided young faculty. Challenges include the need to hire FSN and AVS faculty to cover accredited and highly enrolled classes respectively. Our achievements and challenges are described in more detail below using the Strategic Visions and Values framework. 
+%The year 2020 - 2021 saw the School of Food and Agriculture successfully adapt to the Covid-19 Pandemic. Our faculty successfully migrated their in person courses to Brightspace or other online formats. Meanwhile we were able to continue offer core in person teaching functions, such as hands-on activities at the Witter Center, esssential research at farms, and aspects of the Dietetic Internship. Two of our faculty (JUAN ROMERO and JEN PERRY) successfully applied for early tenure. This speaks to the nurturing environment we have provided young faculty. SUSAN SULLIVAN led an initiative with JEN PERRY and RACHEL SCHATTMAN to propose a Food System's major that will bridge all the three academic disciplines of the three of the former disciplines within the unit (FSN, PSE, AVS). We responded to the President's Define Tomorrow call with a proposal, led by ERIC GALLANDT, to address resiliency of Maine's food system in the context of Covid-19 and climate change. We won approval to hire a Nutritional Biochemist, the search for which is now its final stages with two well qualified candidates in the final selection. This successful recruiting effort speaks directly to the third goal of the President's Strategic Vision and Values framework, that ``The university will be a rewarding place to live, learn and work"  and to the R \& D goal for FY2020 - FY2024 ``To make Maine the best state in the nation in which to live, work, and learn by 2030". Despite the necessary upheaval, our faculty have made way for the new Advising Center which is to be based in space formerly occupied by our faculty in Deering Hall. Meanwhile, we were able to consolidate Sustainable Agriculture Faculty in the top floor of the Roger Clapp Greenhouses. Despite the pandemic our overal recruitment efforts appear to have achieved growth in the Environmental Horticulture and Animal and Veterinary Sciences majors. A reduction on FSN majors, reflecting a national trend, is partially offset by growth in our UMaine Gold online Masters Certificate programs in Food Science and Nutrition, led by MONA THERRIEN.  Our achievements and challenges are described in more detail below using the Strategic Visions and Values framework. 
 \begin{description}[topsep=0pt, noitemsep]
 \item[\textbf {1.}] \textbf{We will support and grow Maine’s economy through new discoveries and by building a workforce whose members are engaged in their communities and prepared for lifelong success.}
 %\begin{description}[label=\textbf{\alph*.}] 
