--- a/Hiring/a_ludo_probandi/Director_Dietetic_Internship/20210715_FSN_dietetic_internship.tex
+++ b/Hiring/a_ludo_probandi/Director_Dietetic_Internship/20210715_FSN_dietetic_internship.tex
@@ -18,34 +18,25 @@
 \let\endchangemargin=\endlist 
 \begin{document}
 \sloppy \rmfamily
-\begin{center}\textbf{NSFA Faculty Position Request\\Date of Submission:~}Sept 29, 2020\end{center}
+\begin{center}\textbf{NSFA Faculty Position Request\\Date of Submission:~}July 15, 2021\end{center}
 
-\noindent\textbf{Unit:~}SFA\hfill\textbf{Title:~}Lecturer in Animal and Veterinary Sciences \hfill \textbf{Start Date:~}Jan 1, 2021\\~\\
+\noindent\textbf{Unit:~}SFA\hfill\textbf{Title:~}Dietetic Internship Program Director \hfill \textbf{Start Date:~}Sep 1, 2021\\~\\
 \textbf{How does this position address needs in academic programming (i.e., courses taught)?}\\~\\
-\small\sffamily Due to recent faculty retirements, AVS has reduced teaching and advising capacity in the face of continued high enrollment and increased retention. This shortage of teaching faculty threatens delivery of our heavily enrolled, foundational, first year courses (AVS 145/146). Furthermore, there is a need to strengthen aspects of the AVS curriculum to better prepare our graduates to enter Maine's agricultural and veterinary workforce, familiarizing them with new technologies, and positioning them to assume leadership roles in animal agriculture and animal health. The AVS faculty feel that a Lecturer should be hired to deliver some foundational classes to first year students, and to strengthen industry-relevant course offerings for students planning to join the workforce in animal agriculture, biotechnology, and related sectors. The lecturer may further increase enrollment and retention through increasing engagement of students during animal experiences and club activities.
+\small\sffamily The School of Food and Agriculture is home to the nationally accredited Dietetic Internship Program which supplies Registered Dietitian Nutritionists (RDN) to the state and nation. This is an essential service in meeting Maine's workforce needs in health care. The Accreditation Council for Education in Nutrition and Dietetics (ACEND) is the accrediting agency for the Academy of Nutrition and Dietetics, and confers eligibility on our students to sit for the National Registration Examination. The Dietetic Internship Program is a two-year program, with both master’s and doctoral programs available. Our graduates have a high passage rate for the National Registration Exam and are employed readily within the field of dietetics.
 \\~\\
-The core teaching need met by the Lecturer will be to deliver AVS 145 Introduction to Animal Science, and AVS 146 - Introduction to Animal Science Laboratory. Both courses are required by AVS Majors, and meet specific requirements for Sustainable Agriculture and Zoology majors. Currently AVS 145 has 116 students enrolled. To meet this high demand, and the scheduling needs of diverse students, the lecture course (AVS 145) will be offered in Fall and Spring semesters. The laboratory course (AVS 146) will also be offered in the Fall (4 lab sections) and Spring (1 - 2 lab sections). The Lecturer will also deliver NFA 117 Issues and Opportunities to the incoming cohort of approximately 85 first year students, and restore classes lost from the animal science curriculum (AVS 349 Livestock Management and AVS 461 Animal Breeding). The lecturer is expected to take on a significant advising load (approximately 40 students). The Lecturer will transition into serving as undergraduate coordinator for AVS, the largest program in SFA with over currently 220 majoring in the curriculum. In addition, according to their expertise, the Lecturer may provide material to support other faculty in delivery of experiential classes at the Witter Center focused on horses (AVS 196, 303, 397), dairy cattle (AVS 347 and 371), or sheep (AVS 232). The Lecturer may contribute projects to our capstone sequence (AVS 401 and 402). The expected teaching load will average 18 credits / year.
+A full position description is attached. Key responsibilities for the position include: Plan and teach the Dietetic Internship courses, orientation and Applications I \& II, and Evaluation, and Dietetic Supervised Practice (FSN 650, 651, 652, 681 respectively);  Provide leadership and take major responsibility for FSN 681, Supervised Practice, which includes curriculum planning to adhere to the Competencies outlined by the Accreditation Council for Education in Nutrition and Dietetics (ACEND) for entry-level dietitians; design of evaluation materials; oversight over implementation; coordination of all intern assessments, leading to computing final grades for the 6 credit course; secure the number of supervised practice sites needed for interns accepted into the Program. 
 \\~\\
 \textbf{\rmfamily How does this position support the research mission of the unit?}\\~\\
-The position will not have a research appointment. However,  the Lecturer will help sustain the animals at the Witter Center through assisting experiential classes. They may also supervise undergraduate student research projects. 
+The position will not have a research appointment. However, the position supports students who wish to include a research qualification (MS or PhD) to their credentials. 
 \newpage
 \noindent\textbf{\rmfamily In what ways does this position support College, University, or System initiatives and/or priorities?}
 \\~\\
-This position directly supports 3 Initiatives of the College Road-map to Excellence:\\\\
-\#1 - Excellence in undergraduate advising and program quality - as undergraduate coordinator improved advising coverage for our undergraduates can be achieved.\\
-\#2 - Growing our research enterprise - the greater support for animal care frees other faculty to focus on research.\\
-\#8 - Expanding our fund-raising efforts - the Witter Center is a focal point for community events and fund-raising. The Lecturer could strengthen fund-raising efforts through organizing club events involving the public and coordinating AVS social media efforts.
-\\~\\
-The position supports the University's strategic values and vision statements by supporting learners in experiential learning in animal science and pre-veterinary medicine (Goals 1.1 and 1.2); supports key infrastructure of the Witter Center (Goal 2); and the hire may be used to support diversity, equity an inclusion  (Goal 3).\\~\\
-This position directly supports two of the three UMaine System R \& D Goals for FY 20-24.\\~\\ 
-\#1 - Make Maine the best state in the nation to live, work, and learn by 2030 - by education regarding animals found on family farms, and allowing research to be done in a farm setting.\\
-\#3 - Prepare the knowledge-and-innovation workforce for Maine - by training qualified graduates and undergraduates to enter the Maine workforce in Maine's animal industries.\\~\\
-\vfill
+This position directly supports workforce needs of the state in the health professions, provides extensive experiential learning in a clinical practice setting, and can be used to support initiatives in diversity, equity and inclusion through recruitment, training and employment of individuals from under-represented groups.\vfill
 \noindent\textbf{\rmfamily Can this position meet any partner accommodation needs (describe)?}\\~\\
-The skills are such that this position might be undertaken by the spouse of a tenure track faculty member, but no such opportunity has been identified.\\~\\
+The skills are such that this position might be part of an accommodation.\\~\\
 \vfill
 \noindent\textbf{\rmfamily In what ways does this position support interests of the State, including workforce development?}\\~\\
-This position supports the health of Maine's population, Maine's animal producers, and educates students to enter Maine's diverse animal industries.\\~\\
+This position supports the health of Maine's population, Maine's health care-providers, and educates students to enter Maine's health care workforce.\\~\\
 \vfill
 \newpage\noindent\textbf{\rmfamily What are the anticipated startup needs (items, not just total dollar value)?}\\~\\
 None\\~\\
