--- a/Hiring/a_ludo_probandi/Director_Dietetic_Internship/20210715_FSN_dietetic_internship.tex
+++ b/Hiring/a_ludo_probandi/Director_Dietetic_Internship/20210715_FSN_dietetic_internship.tex
@@ -50,5 +50,5 @@ An office\\~\\
 \noindent\textbf{\rmfamily How do you anticipate meeting the space needs?} \\~\\
 Using an existing office in SFA space\\~\\
 \vfill
-\noindent\textbf{\rmfamily Was this position request discussed and approved by the unit faculty?} \hfill ~ \hfill \textbf{\Large{\HollowBox} \normalsize{Yes}} \hfill \textbf{\Large{\HollowBox} \normalsize{ No}}\\~\\%table373\CrossedBox_tocheckbox
+\noindent\textbf{\rmfamily Was this position request discussed and approved by the unit faculty?} \hfill ~ \hfill \textbf{\Large{\CrossedBox} \normalsize{Yes}} \hfill \textbf{\Large{\HollowBox} \normalsize{ No}}\\~\\%table373\CrossedBox_tocheckbox
 \end{document}
